<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E3E3E"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/edtContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSesion" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="#254D32"
        android:hint="@string/salir"
        android:onClick="salir"
        android:textColorHint="#F8F5F5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContra"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
<<<<<<< HEAD
        android:layout_marginTop="124dp"
=======
        android:layout_marginTop="123dp"
>>>>>>> dbe7f94c4463baab337d638ddd0b9608f1cca379
        android:backgroundTint="#254D32"
        android:hint="@string/ingresar"
        android:onClick="ingresar"
        android:textColorHint="#FBFBFB"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalir"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContra"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="242dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="160dp"
<<<<<<< HEAD
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/registrarse"
        android:textColor="@drawable/text_selector"
        android:textColorHint="#FAF6F6"
=======
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/registrarse"
        android:textColorHint="#FAF7F7"
>>>>>>> dbe7f94c4463baab337d638ddd0b9608f1cca379
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContra" />

    <EditText
        android:id="@+id/edtContra"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/contra"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreo" />

    <TextView
        android:id="@+id/textSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/inicio"
        android:textColorHint="#3A7D44"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/barra"
        android:layout_width="428dp"
        android:layout_height="68dp"
        android:layout_marginBottom="118dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#254D32"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/textSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>